testsuite/tests/indexed-types/should_fail/ExplicitForAllFams4a.stderr

ExplicitForAllFams4a.hs:7:12: error:
    • Explicitly quantified but not used in LHS pattern: type variable ‘b’
    • In the type family declaration for ‘H’

ExplicitForAllFams4a.hs:8:10: error:
    • Explicitly quantified but not used in LHS pattern: type variable ‘b’
    • In the type family declaration for ‘H’
